<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@color/purple_200"
    tools:context=".activity.CadastrarNovoUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:backgroundTintMode="add"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#FFFFFF">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/digite_nome"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/digite_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/digite_senha"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonAtualizarNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/botao_cadastrar"
            android:onClick="validarCadastrodeUsuario"
            android:text="@string/botao_cadastrar"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>