<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CadastrarAnuncioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/imagemCadastro1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/galeria" />

        <ImageView
            android:id="@+id/imagemCadastro2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/galeria" />

        <ImageView
            android:id="@+id/imagemCadastro3"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/galeria" />

        <ImageView
            android:id="@+id/imagemCadastro4"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/galeria" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/digite_titulo"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/digite_endereco"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/editValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="R$ xxx,xx"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/digite_telefone"
        android:inputType="phone"
        android:padding="10dp"
        app:mask="+__ (__) _____-____"
        app:maskCharacter="_"
        app:maskStyle="completable" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/digite_descricao"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validarDadosAnuncio"
        android:text="Cadastrar Anúncio" />

</LinearLayout>