<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ConfiguracoesActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewFotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/padrao"
        app:civ_border_color="@color/black_overlay"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonCamera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:backgroundTint="@color/purple_200"
            app:srcCompat="@drawable/ic_camera_cinza_alt_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="OU"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/imageButtonGaleria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="@color/purple_200"
            app:srcCompat="@drawable/ic_baseline_photo_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:backgroundTintMode="add"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#FFFFFF">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/digite_nome"
            android:padding="10dp"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/digite_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/digite_senha"
            android:inputType="textPassword"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>